@@ -1,3 +1,6 @@
+31 March 2008
++ Added missing repeatYearly function.
+
 Version 1.6.2
 ----------------------------------------------------------------
 14 March 2008
